--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "angular": "~1.4.9",
     "angular-ui-router": "~0.2.17",
     "bootstrap": "~3.3.6",
-    "angular-clipboard": "~1.3.0"
+    "angular-clipboard": "~1.3.0",
+    "ngstorage": "^0.3.10"
   }
 }
